Z-index was causing more issues than it fixed

--- a/play.css
+++ b/play.css
@@ -65,7 +65,6 @@ main {
     height: calc(25.6px + 19%);
     background-color: transparent;
     transition: right 0.3s ease-in-out;
-    z-index: 2;
   }
 
   input[type='checkbox'] { 
@@ -152,7 +151,6 @@ main {
     color: white;
     font-size: 13px;
     text-align: left;
-    z-index: 1;
   }
   
   #cityStats {
@@ -238,7 +236,6 @@ main {
       height: calc(25.6px + 14.8%);
       background-color: transparent;
       transition: right 0.3s ease-in-out;
-      z-index: 2;
     }
     #cityStats,
   #buyBuilding {
@@ -247,7 +244,6 @@ main {
     color: white;
     font-size: 13px;
     text-align: left;
-    z-index: 1;
   }
   
   #cityStats {
